--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "gunshi",
-  "description": "Modern command-line interfaces composer",
+  "description": "Modern javascript command-line library",
   "version": "0.0.0",
   "author": {
     "name": "kazuya kawaguchi",
