feat: export context and renderer APIs (#11)
* feat: export context and renderer APIs

* fix: typo

--- a/package.json
+++ b/package.json
@@ -43,6 +43,18 @@
       "require": "./lib/index.js",
       "default": "./lib/index.js"
     },
+    "./context": {
+      "types": "./lib/context.d.ts",
+      "import": "./lib/context.js",
+      "require": "./lib/context.js",
+      "default": "./lib/context.js"
+    },
+    "./renderer": {
+      "types": "./lib/renderer.d.ts",
+      "import": "./lib/renderer.js",
+      "require": "./lib/renderer.js",
+      "default": "./lib/renderer.js"
+    },
     "./package.json": "./package.json",
     "./*": "./*"
   },
