feat: add examples (#17)
* feat: add examples

* fix

* fix

* fix: type errors

* fix

* fxi

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -37,6 +37,9 @@ jobs:
       - name: Install dependencies
         run: pnpm install --frozen-lockfile
 
+      - name: Building
+        run: pnpm build
+
       - name: Linting
         run: pnpm lint
 
@@ -119,6 +122,9 @@ jobs:
 
       - name: Install dependencies
         run: pnpm install --frozen-lockfile
+
+      - name: Building
+        run: pnpm build
 
       - name: Type checking
         run: pnpm typecheck
