--- a/playground/deno/deno.json
+++ b/playground/deno/deno.json
@@ -3,6 +3,6 @@
     "dev": "deno run --watch main.ts"
   },
   "imports": {
-    "gunshi": "jsr:@kazupon/gunshi@^0.4.0"
+    "@kazupon/gunshi": "jsr:@kazupon/gunshi@^0.5.3"
   }
 }
