refactor: import specifier strictly

--- a/package.json
+++ b/package.json
@@ -102,12 +102,16 @@
     "@types/node": "^22.13.9",
     "@vitest/eslint-plugin": "^1.1.36",
     "bumpp": "^10.0.3",
-    "eslint": "^9.21.0",
+    "eslint": "^9.22.0",
     "eslint-config-prettier": "^10.0.2",
+    "eslint-import-resolver-typescript": "^4.2.2",
+    "eslint-plugin-import": "^2.31.0",
     "eslint-plugin-jsonc": "^2.19.1",
+    "eslint-plugin-module-interop": "^0.3.0",
     "eslint-plugin-promise": "^7.2.1",
     "eslint-plugin-regexp": "^2.7.0",
     "eslint-plugin-unicorn": "^57.0.0",
+    "eslint-plugin-unused-imports": "^4.1.4",
     "eslint-plugin-yml": "^1.17.0",
     "gh-changelogen": "^0.2.8",
     "jsr": "^0.13.4",
