--- a/package.json
+++ b/package.json
@@ -124,6 +124,7 @@
     "typescript": "^5.4.2",
     "typescript-eslint": "^8.26.0",
     "vitepress": "^1.6.3",
+    "vitepress-plugin-group-icons": "^1.3.8",
     "vitest": "^3.0.7"
   },
   "pnpm": {
