docs: add typedoc

--- a/package.json
+++ b/package.json
@@ -78,8 +78,11 @@
     "clean": "git clean -df",
     "dev": "pnpx @eslint/config-inspector --config eslint.config.ts",
     "dev:eslint": "pnpx @eslint/config-inspector --config eslint.config.ts",
-    "docs:build": "vitepress build docs",
-    "docs:dev": "vitepress dev docs",
+    "docs:build": "pnpm run docs:build:typedoc && pnpm docs:build:vitepress",
+    "docs:build:typedoc": "typedoc",
+    "docs:build:vitepress": "vitepress build docs",
+    "docs:dev": "pnpm run docs:build:typedoc && pnpm docs:dev:vitepress",
+    "docs:dev:vitepress": "vitepress dev docs",
     "docs:preview": "vitepress preview docs",
     "fix": "pnpm run --stream --color \"/^fix:/\"",
     "fix:eslint": "eslint . --fix",
@@ -129,6 +132,8 @@
     "pkg-pr-new": "^0.0.41",
     "prettier": "^3.5.3",
     "tsdown": "^0.6.10",
+    "typedoc": "^0.28.1",
+    "typedoc-plugin-markdown": "^4.6.0",
     "typescript": "^5.8.2",
     "typescript-eslint": "^8.28.0",
     "vitepress": "^1.6.3",
