--- a/package.json
+++ b/package.json
@@ -134,6 +134,7 @@
     "tsdown": "^0.6.10",
     "typedoc": "^0.28.1",
     "typedoc-plugin-markdown": "^4.6.0",
+    "typedoc-vitepress-theme": "^1.1.2",
     "typescript": "^5.8.2",
     "typescript-eslint": "^8.28.0",
     "vitepress": "^1.6.3",
