--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -66,4 +66,4 @@ jobs:
         run: ./scripts/release.sh
         env:
           NPM_TOKEN: ${{secrets.NPM_TOKEN}}
-          # NPM_CONFIG_PROVENANCE: true
+          NPM_CONFIG_PROVENANCE: true
