--- a/package.json
+++ b/package.json
@@ -118,6 +118,8 @@
     "eslint-plugin-regexp": "^2.7.0",
     "eslint-plugin-unicorn": "^58.0.0",
     "eslint-plugin-unused-imports": "^4.1.4",
+    "eslint-plugin-vue": "^10.0.0",
+    "eslint-plugin-vue-composable": "^1.0.0",
     "eslint-plugin-yml": "^1.17.0",
     "gh-changelogen": "^0.2.8",
     "jsr": "^0.13.4",
@@ -135,7 +137,8 @@
     "vitepress": "^1.6.3",
     "vitepress-plugin-group-icons": "^1.3.8",
     "vitepress-plugin-llms": "^0.0.22",
-    "vitest": "^3.0.9"
+    "vitest": "^3.0.9",
+    "vue": "^3.5.13"
   },
   "pnpm": {
     "onlyBuiltDependencies": [
