--- a/tsconfig.json
+++ b/tsconfig.json
@@ -108,6 +108,6 @@
     // "skipDefaultLibCheck": true,                      /* Skip type checking .d.ts files that are included with TypeScript. */
     "skipLibCheck": true /* Skip type checking all .d.ts files. */
   },
-  "include": ["**/*.ts", "src/definitionts"],
+  "include": ["**/*.ts"],
   "exclude": ["playground/bun/index.ts", "playground/deno/main.ts"]
 }
