--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
   "publishConfig": {
     "access": "public"
   },
-  "packageManager": "pnpm@10.7.1",
+  "packageManager": "pnpm@10.8.0",
   "engines": {
     "node": ">= 20"
   },
@@ -49,10 +49,10 @@
       "default": "./lib/definition.js"
     },
     "./renderer": {
-      "types": "./lib/renderer/index.d.ts",
-      "import": "./lib/renderer/index.js",
-      "require": "./lib/renderer/index.js",
-      "default": "./lib/renderer/index.js"
+      "types": "./lib/renderer.d.ts",
+      "import": "./lib/renderer.js",
+      "require": "./lib/renderer.js",
+      "default": "./lib/renderer.js"
     },
     "./generator": {
       "types": "./lib/generator.d.ts",
@@ -60,8 +60,7 @@
       "require": "./lib/generator.js",
       "default": "./lib/generator.js"
     },
-    "./package.json": "./package.json",
-    "./*": "./*"
+    "./package.json": "./package.json"
   },
   "types": "lib/index.d.ts",
   "typesVersions": {
@@ -108,15 +107,15 @@
   "devDependencies": {
     "@eslint/markdown": "^6.3.0",
     "@intlify/core": "next",
-    "@kazupon/eslint-config": "^0.26.1",
+    "@kazupon/eslint-config": "^0.27.0",
     "@kazupon/prettier-config": "^0.1.1",
     "@types/node": "^22.14.0",
-    "@vitest/eslint-plugin": "^1.1.39",
+    "@vitest/eslint-plugin": "^1.1.42",
     "bumpp": "^10.1.0",
     "deno": "^2.2.8",
     "eslint": "^9.24.0",
-    "eslint-config-prettier": "^10.1.1",
-    "eslint-import-resolver-typescript": "^4.3.1",
+    "eslint-config-prettier": "^10.1.2",
+    "eslint-import-resolver-typescript": "^4.3.2",
     "eslint-plugin-import": "^2.31.0",
     "eslint-plugin-jsonc": "^2.20.0",
     "eslint-plugin-module-interop": "^0.3.1",
@@ -129,20 +128,20 @@
     "eslint-plugin-yml": "^1.17.0",
     "gh-changelogen": "^0.2.8",
     "jsr": "^0.13.4",
-    "knip": "^5.47.0",
+    "knip": "^5.50.2",
     "lint-staged": "^15.5.0",
     "messageformat": "4.0.0-10",
     "pkg-pr-new": "^0.0.42",
     "prettier": "^3.5.3",
-    "publint": "^0.3.10",
-    "tsdown": "0.7.4",
-    "typedoc": "^0.28.1",
-    "typedoc-plugin-markdown": "^4.6.1",
+    "publint": "^0.3.11",
+    "tsdown": "0.6.10",
+    "typedoc": "^0.28.2",
+    "typedoc-plugin-markdown": "^4.6.2",
     "typedoc-vitepress-theme": "^1.1.2",
     "typescript": "^5.8.3",
-    "typescript-eslint": "^8.29.0",
+    "typescript-eslint": "^8.29.1",
     "vitepress": "^1.6.3",
-    "vitepress-plugin-group-icons": "^1.3.8",
+    "vitepress-plugin-group-icons": "^1.4.1",
     "vitepress-plugin-llms": "^0.0.22",
     "vitest": "^3.1.1",
     "vue": "^3.5.13"
