feat: support negatable option prefixed with `no-` (#93)
* feat: support negatable option prefixed with `no-`

* feat: support negatable option

* fix

* fix: ci

* fix

--- a/package.json
+++ b/package.json
@@ -96,13 +96,13 @@
     "prepack": "pnpm build",
     "prepare": "git config --local core.hooksPath .githooks",
     "release": "bumpp --commit \"release: v%s\" --all --push --tag",
-    "test": "vitest run",
+    "test": "vitest --typecheck run",
     "typecheck": "pnpm run --stream --color \"/^typecheck:/\"",
     "typecheck:deno": "deno check --all ./src",
     "typecheck:tsc": "tsc --noEmit"
   },
   "dependencies": {
-    "args-tokens": "^0.15.0"
+    "args-tokens": "^0.15.1"
   },
   "devDependencies": {
     "@eslint/markdown": "^6.3.0",
