--- a/package.json
+++ b/package.json
@@ -79,6 +79,7 @@
     }
   },
   "scripts": {
+    "bench": "vitest bench --run",
     "build": "tsdown",
     "changelog": "gh-changelogen --repo=kazupon/gunshi",
     "clean": "git clean -df",
@@ -134,6 +135,7 @@
     "eslint-plugin-vue-composable": "^1.0.0",
     "eslint-plugin-yml": "^1.18.0",
     "gh-changelogen": "^0.2.8",
+    "gunshi019": "npm:gunshi@0.19.0",
     "jsr": "^0.13.4",
     "jsr-exports-lint": "^0.2.0",
     "knip": "^5.53.0",
