--- a/package.json
+++ b/package.json
@@ -79,7 +79,8 @@
     }
   },
   "scripts": {
-    "bench": "vitest bench --run",
+    "bench:mitata": "node --expose-gc bench/mitata.js",
+    "bench:vitest": "vitest bench --run",
     "build": "tsdown",
     "changelog": "gh-changelogen --repo=kazupon/gunshi",
     "clean": "git clean -df",
@@ -141,6 +142,7 @@
     "knip": "^5.53.0",
     "lint-staged": "^15.5.1",
     "messageformat": "4.0.0-10",
+    "mitata": "^1.0.34",
     "pkg-pr-new": "^0.0.43",
     "prettier": "^3.5.3",
     "publint": "^0.3.12",
