docs: tweak api references

--- a/package.json
+++ b/package.json
@@ -88,7 +88,7 @@
     "dev:eslint": "pnpx @eslint/config-inspector --config eslint.config.ts",
     "dev:typedoc": "typedoc --watch --preserveWatchOutput",
     "docs:build": "pnpm run docs:build:typedoc && pnpm docs:build:vitepress",
-    "docs:build:typedoc": "typedoc",
+    "docs:build:typedoc": "typedoc --excludeInternal",
     "docs:build:vitepress": "vitepress build docs",
     "docs:dev": "pnpm run docs:build:typedoc && pnpm docs:dev:vitepress",
     "docs:dev:vitepress": "vitepress dev docs",
