--- a/package.json
+++ b/package.json
@@ -157,7 +157,7 @@
     "vitepress-plugin-llms": "^1.3.4",
     "vitest": "^3.1.4",
     "vue": "^3.5.14",
-    "zod": "^3.25.28"
+    "zod": "catalog:"
   },
   "pnpm": {
     "onlyBuiltDependencies": [
