--- a/package.json
+++ b/package.json
@@ -42,7 +42,7 @@
     "lint:prettier": "prettier . --check",
     "prepare": "git config --local core.hooksPath .githooks",
     "preview:docs": "pnpm -F @gunshi/docs preview",
-    "release": "bumpp package.json packages/**/package.json --commit \"release: v\" --all --push --tag",
+    "release": "bumpp package.json packages/**/package.json packages/**/jsr.json --commit \"release: v\" --all --push --tag",
     "test": "vitest --typecheck run",
     "typecheck": "pnpm run --stream --color \"/^typecheck:/\"",
     "typecheck:deno": "pnpm -r --if-present typecheck:deno",
