chore: use prettier next

--- a/package.json
+++ b/package.json
@@ -76,7 +76,7 @@
     "lint-staged": "^16.1.0",
     "mitata": "^1.0.34",
     "pkg-pr-new": "^0.0.51",
-    "prettier": "^3.5.3",
+    "prettier": "next",
     "typescript": "catalog:",
     "typescript-eslint": "^8.33.1",
     "vitest": "^3.2.1"
