chore: swtich to prettier 3.6

--- a/package.json
+++ b/package.json
@@ -34,12 +34,12 @@
     "fix": "pnpm run --stream --color \"/^fix:/\"",
     "fix:eslint": "eslint . --fix",
     "fix:knip": "knip --fix --no-exit-code",
-    "fix:prettier": "prettier . --write",
+    "fix:prettier": "prettier . --write --experimental-cli",
     "lint": "pnpm run --stream --color \"/^lint:/\"",
     "lint:eslint": "eslint .",
     "lint:jsr": "pnpm -r --if-present lint:jsr",
     "lint:knip": "knip",
-    "lint:prettier": "prettier . --check",
+    "lint:prettier": "prettier . --check --experimental-cli",
     "prepare": "git config --local core.hooksPath .githooks",
     "preview:docs": "pnpm -F @gunshi/docs preview",
     "release": "bumpp package.json packages/**/package.json packages/**/jsr.json --commit \"release: v\" --all --push --tag",
@@ -76,7 +76,7 @@
     "lint-staged": "^16.1.0",
     "mitata": "^1.0.34",
     "pkg-pr-new": "^0.0.53",
-    "prettier": "next",
+    "prettier": "^3.6.0",
     "typescript": "catalog:",
     "typescript-eslint": "^8.33.1",
     "vitest": "^3.2.1"
