chore: ready for release on monorepo workspaces (#213)
* chore: ready for release on monorepo workspaces

* refactor: pkg-pr-new publish scripts

* fix: add since jsdoc tag for docs

* chore: tweaek docs

* fix: change jsr package name

* fix: remove plugin-i18n partial code in gunshi

* chore

* fix: type parameters

* fix: type errors

* fix

--- a/.github/workflows/nightly-release.yml
+++ b/.github/workflows/nightly-release.yml
@@ -33,4 +33,6 @@ jobs:
         run: pnpm build
 
       - name: Release with pkg-pr-new
-        run: pnpx pkg-pr-new publish --compact --pnpm './packages/gunshi'
+        run: |
+          pkgs=$(ls -d ./packages/* | grep -v ./packages/docs)
+          pnpx pkg-pr-new publish --compact --pnpm $pkgs
