--- a/packages/docs/package.json
+++ b/packages/docs/package.json
@@ -2,7 +2,7 @@
   "name": "@gunshi/docs",
   "description": "Documentation for gunshi",
   "private": true,
-  "version": "0.26.3",
+  "version": "0.27.0-alpha.1",
   "author": {
     "name": "kazuya kawaguchi",
     "email": "kawakazu80@gmail.com"
