--- a/packages/gunshi/package.json
+++ b/packages/gunshi/package.json
@@ -1,7 +1,7 @@
 {
   "name": "gunshi",
   "description": "Modern javascript command-line library",
-  "version": "0.26.3",
+  "version": "0.27.0-alpha.1",
   "author": {
     "name": "kazuya kawaguchi",
     "email": "kawakazu80@gmail.com"
