--- a/packages/plugin-global/package.json
+++ b/packages/plugin-global/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@gunshi/plugin-global",
   "description": "global options plugin for gunshi",
-  "version": "0.26.3",
+  "version": "0.27.0-alpha.1",
   "author": {
     "name": "kazuya kawaguchi",
     "email": "kawakazu80@gmail.com"
