--- a/packages/resources/package.json
+++ b/packages/resources/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@gunshi/resources",
   "description": "built-in localization resources for gunshi",
-  "version": "0.26.3",
+  "version": "0.27.0-alpha.1",
   "author": {
     "name": "kazuya kawaguchi",
     "email": "kawakazu80@gmail.com"
