--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "gunshi-monorepo",
   "description": "Monorepo for gunshi - Modern javascript command-line library",
   "private": true,
+  "version": "0.27.0-alpha.2",
   "author": {
     "name": "kazuya kawaguchi",
     "email": "kawakazu80@gmail.com"
