--- a/package.json
+++ b/package.json
@@ -52,7 +52,7 @@
     "lint:prettier": "prettier . --check --experimental-cli",
     "prepare": "git config --local core.hooksPath .githooks && pnpm run gen:importmap",
     "preview:docs": "pnpm -F @gunshi/docs preview",
-    "release": "bumpp package.json packages/**/package.json packages/**/jsr.json --commit \"release: v\" --all --push --tag",
+    "release": "bumpp \"package.json packages/**/package.json packages/**/jsr.json\" --commit \"release: v\" --all --push --tag",
     "test": "vitest --typecheck run",
     "typecheck": "pnpm run --stream --color \"/^typecheck:/\"",
     "typecheck:deno": "pnpm -r --if-present typecheck:deno",
@@ -67,7 +67,7 @@
     "@typescript/native-preview": "7.0.0-dev.20250705.1",
     "@vitest/coverage-v8": "3.2.4",
     "@vitest/eslint-plugin": "^1.3.4",
-    "bumpp": "^10.1.1",
+    "bumpp": "^10.2.0",
     "eslint": "^9.30.1",
     "eslint-config-prettier": "^10.1.5",
     "eslint-import-resolver-typescript": "^4.4.4",
