--- a/package.json
+++ b/package.json
@@ -52,7 +52,7 @@
     "lint:prettier": "prettier . --check --experimental-cli",
     "prepare": "git config --local core.hooksPath .githooks && pnpm run gen:importmap",
     "preview:docs": "pnpm -F @gunshi/docs preview",
-    "release": "bumpp \"package.json packages/**/package.json packages/**/jsr.json\" --commit \"release: v\" --all --push --tag",
+    "release": "bumpp \"package.json\" \"packages/**/package.json\" \"packages/**/jsr.json\" --commit \"release: v\" --all --push --tag",
     "test": "vitest --typecheck run",
     "typecheck": "pnpm run --stream --color \"/^typecheck:/\"",
     "typecheck:deno": "pnpm -r --if-present typecheck:deno",
