--- a/packages/plugin-completion/package.json
+++ b/packages/plugin-completion/package.json
@@ -58,9 +58,11 @@
     "typecheck:deno": "deno check ./src"
   },
   "dependencies": {
+    "@bombsh/tab": "git+ssh://git@github.com:bombshell-dev/tab.git",
     "@gunshi/plugin": "workspace:*"
   },
   "devDependencies": {
+    "@gunshi/shared": "workspace:*",
     "deno": "catalog:",
     "jsr": "catalog:",
     "jsr-exports-lint": "catalog:",
