--- a/tsconfig.json
+++ b/tsconfig.json
@@ -44,6 +44,7 @@
       "@gunshi/resources/en-US": ["./packages/resources/locales/en-US.json"],
       "@gunshi/resources/ja-JP": ["./packages/resources/locales/ja-JP.json"],
       "@gunshi/plugin-renderer": ["./packages/plugin-renderer/src/index.ts"],
+      "@gunshi/plugin-completion": ["./packages/plugin-completion/src/index.ts"],
       "@gunshi/plugin-i18n": ["./packages/plugin-i18n/src/index.ts"],
       "@gunshi/plugin-global": ["./packages/plugin-global/src/index.ts"]
     } /* Specify a set of entries that re-map imports to additional lookup locations. */,
